added table for results

--- a/pages/index.html
+++ b/pages/index.html
@@ -21,7 +21,9 @@
         <div class="results">
             <table>
                 <tr>
-                    <th>Hi</th>
+                    <th>Track Name</th>
+                    <th>Artist Name</th>
+                    <th>Album Name</th>
                 </tr>
             </table>
         </div>
