created folder structure to sperate back and front end, added favorite list table

--- a/pages/index.html
+++ b/pages/index.html
@@ -19,7 +19,7 @@
             <input id="album" type="search">
         </div>
         <div class="results">
-            <table>
+            <table class="resultList">
                 <tr>
                     <th>Track Name</th>
                     <th>Artist Name</th>
@@ -27,5 +27,17 @@
                 </tr>
             </table>
         </div>
+        <div class="myList">
+            <table class="fav">
+                <tr>
+                    <th>Ranking</th>
+                    <th>Track Name</th>
+                    <th>Artist Name</th>
+                    <th>Album Name</th>
+                </tr>
+            </table>
+        </div>
+
+        <script src="../scripts/frontend/table.js"></script>
     </body>
 </html>
