new playlist model, and changed how findAll works

--- a/pages/index.html
+++ b/pages/index.html
@@ -19,6 +19,8 @@
             <input id="album" type="search">
         </div>
         <div class="results">
+            <h3>Results: </h3>
+            
             <table class="resultList">
                 <tr>
                     <th>Track Name</th>
@@ -28,6 +30,7 @@
             </table>
         </div>
         <div class="myList">
+            <h3>Favorite: </h3>
             <table class="fav">
                 <tr>
                     <th>Ranking</th>
